app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: kube-101-service
spec:
  selector:
    app: kube-101
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
